# Budget-Tool

./: .gitignore  LICENSE  README.md  TODO.md  api.py  auth.py  budget_tool.py  pyproject.toml  requirements-dev.txt  requirements.txt  webapp.py
.github/workflows/: python.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
static/: style-dark.css  style-light.css  style.css  theme.js
templates/: auto_scan.html  budget.html  dashboard.html  forecast.html  history.html  index.html  layout.html  login.html  manage.html  overview.html
tests/: test_api.py  test_budget_tool.py  test_encryption.py  test_subscription.py  test_webapp.py
